--- a/Day-03/03-first-playbook/index.html
+++ b/Day-03/03-first-playbook/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header>
-        <h1>I am learning Ansible with Abhishek Veeramalla</h1>
+        <h1>I am learning Ansible with Adekunle Joshua</h1>
     </header>
     <main>
         <h2>Ansible Zero to Hero Series</h2>
@@ -42,7 +42,7 @@
         <p>For more information, visit www.youtube.com/abhishekveeramalla</p>
     </main>
     <footer>
-        <p>&copy; 2024 Abhishek.Veeramalla</p>
+        <p>Copy from Abhishek project/p>
     </footer>
 </body>
 </html>
